# learnCmake

./: .gitignore  CMakeLists.txt  README.md
lesson1_1/: CMakeLists.txt  add.cpp  main.cpp
lesson1_2/: CMakeLists.txt  main.cpp
lesson2_1/: CMakeLists.txt  main.cpp
lesson2_1/add/: CMakeLists.txt
lesson2_1/lib/: add.h
lesson2_2/: CMakeLists.txt  main.cpp
lesson2_2/add/: CMakeLists.txt  add.cpp
lesson3_1/: CMakeLists.txt  main.cpp
lesson3_2/: CMakeLists.txt  main.cpp
lesson3_2/add/: CMakeLists.txt  add.cpp  add.h
lesson3_2/calculator/: CMakeLists.txt  calculator.cpp  calculator.h
lesson3_2/common/: CMakeLists.txt  common.cpp  common.h
lesson3_2/sub/: CMakeLists.txt  sub.cpp  sub.h
lesson4_1/: CMakeLists.txt  main.cpp
